tests/snapshots/errors/return_type_missing.mc
fun get_value() -> int {
    return;
}
print(get_value());
